--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.5.3
         with:
-          ssh-private-key: ${{ secrets.VARIABLE }}
+          ssh-private-key: ${{ secrets.SH_PRIVATE_KEY }}
 
       - name: Deploy Medusa to EC2
         run: |
